syntax = "proto3";

option csharp_namespace = "MyGrpcService";

import "google/protobuf/empty.proto";

package myservice;

// Poruka koju server prima
message MyRequest {
  int32 SensorId = 1;
  string SensorKind=2;
  double Value = 3;
  string Time=4;
  
}

message serverResponse {
        string message=1;

}

// Servis
service MyService {
  rpc SendData(MyRequest) returns (serverResponse);
}